--- a/style.css
+++ b/style.css
@@ -1,33 +1,39 @@
-*{
-    margin:0;
-    padding:0;
-    font-family: 'dosis',sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'dosis', sans-serif;
 }
-.Hero{
+
+.Hero {
     width: 80%;
     margin: auto;
 }
-.navbar{
+
+.navbar {
     margin: 30px auto;
     display: flex;
-    align-items:center;
+    align-items: center;
 }
-ul{
+
+ul {
     flex: 1;
     text-align: right;
 }
-li{
+
+li {
     display: inline-block;
     list-style: none;
     margin: 0 25px;
 }
-ul li a{
+
+ul li a {
     text-decoration: none;
     color: black;
     padding: 0 10px;
     position: relative;
 }
-ul li a::after{
+
+ul li a::after {
     content: '';
     width: 0;
     height: 10px;
@@ -38,57 +44,117 @@ ul li a::after{
     top: -55px;
     transition: 0.5s;
 }
-ul li a:hover::after{
-   width: 100%;
+
+ul li a:hover::after {
+    width: 100%;
 }
-.navbar-icons img{
+
+.navbar-icons img {
     height: 25px;
     margin-left: 40px;
     cursor: pointer;
 }
-.navbar-icons{
+
+.navbar-icons {
     margin-left: 40px;
 }
-.banner{
+
+.banner {
     display: flex;
     margin-top: 80px;
 }
-.left-column,.right-column{
-   flex-basis: 50%; 
+
+.left-column,
+.right-column {
+    flex-basis: 50%;
 }
-.right-column img{
+
+.right-column img {
     width: 100%;
 
 }
-.sharch-box{
+
+.sharch-box {
     width: 45%;
     display: flex;
     padding-bottom: 3px;
-    border-bottom: 1px solid #ddd; 
-    margin: 10px 0 30px;  
+    border-bottom: 1px solid #ddd;
+    margin: 10px 0 30px;
 }
-.sharch-box img{
+
+.sharch-box img {
     height: 25px;
     width: 25px;
     cursor: pointer;
 }
-.sharch-box input{
+
+.sharch-box input {
     width: 100%;
     margin-left: 15px;
     font-size: 17px;
     border: 0;
     outline: none;
 }
-.left-column h1{
+
+.left-column h1 {
     font-size: 100px;
-}.left-column h3{
+}
+
+.left-column h3 {
     font-size: 35px;
 }
-span{
+
+span {
     color: #f14a60;
 }
-.left-column p{
+
+.left-column p {
     font-size: 14px;
     color: #999;
     margin: 50px 0;
+}
+
+.btn button {
+    padding: 7px 30px;
+    margin-right: 15px;
+    outline: none;
+    border: 1px solid #fb7381;
+    border-radius: 20px;
+    cursor: pointer;
+    color: #fb7381;
+    background: transparent;
+
+}
+
+.btn .primary-btn {
+    background: linear-gradient(#fb7381, #f14a60);
+    box-shadow: 0 2px 15px rgba(248, 38, 103, 0.26);
+    color: #fff;
+}
+
+.btn {
+    margin-bottom: 50px;
+}
+
+.social-icons {
+    width: 200px;
+    text-align: center;
+    opacity: .4;
+    position: relative;
+    margin: 160px;
+}
+
+.social-icons img {
+    height: 20px;
+    margin: 0 14px;
+}
+
+.social-icons::after {
+    content: '';
+    width: 150px;
+    height: 1px;
+    background: #000;
+    position: absolute;
+    left: -160px;
+    top: 10px;
 }
